[MOBILE-7164] Updated project to accommodate Xcode 12
- Added 'EXCLUDED_ARCHS' for simulator builds because xcode is adding arm64 archs to simulator builds (this might be a bug in Xcode12?)
- Change minimum deployment target for iOS 8.0 -> 9.0
- updated modular-crash-reporter-ios to accommodate deprecations in iOS 9.0.
- updated podspec to include EXCLUDED_ARCHS
- various other build warnings fixed.

--- a/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
+++ b/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1170"
+   LastUpgradeVersion = "1200"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -18,6 +18,20 @@
                BuildableName = "NewRelic.framework"
                BlueprintName = "Agent_iOS"
                ReferencedContainer = "container:Agent.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "020DEB0A2519588A00BF7309"
+               BuildableName = "CrashReporter-iOS-Tests.xctest"
+               BlueprintName = "CrashReporter-iOS-Tests"
+               ReferencedContainer = "container:modular-crash-reporter-ios/CrashReporter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -42,6 +56,16 @@
                   Identifier = "Agent_Tests">
                </Test>
             </SkippedTests>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "020DEB0A2519588A00BF7309"
+               BuildableName = "CrashReporter-iOS-Tests.xctest"
+               BlueprintName = "CrashReporter-iOS-Tests"
+               ReferencedContainer = "container:modular-crash-reporter-ios/CrashReporter.xcodeproj">
+            </BuildableReference>
          </TestableReference>
       </Testables>
    </TestAction>
