--- a/cocoapods/NewRelicAgent.podspec.template
+++ b/cocoapods/NewRelicAgent.podspec.template
@@ -7,8 +7,12 @@ Pod::Spec.new do |s|
   s.license                = { :type => "Commercial", :file => "NewRelicAgent/LICENSE" }
   s.author                 = { "New Relic, Inc." => "support@newrelic.com" }
   s.source                 = { :http => "https://download.newrelic.com/ios_agent/NewRelic_XCFramework_Agent_X.XX.zip" }
-  s.ios.deployment_target  = '8.0'
+  s.ios.deployment_target  = '9.0'
   s.tvos.deployment_target = '9.0'
+  s.ios.pod_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=iphonesimulator*]' => 'arm64 arm64e' }
+  s.ios.user_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=iphonesimulator*]' => 'arm64 arm64e' }
+  s.tvos.pod_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=appletvsimulator*]' => 'arm64' }
+  s.tvos.user_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=appletvsimulator*]' => 'arm64' }
   s.vendored_frameworks    = "NewRelicAgent/NewRelic.xcframework"
   s.preserve_paths         = "NewRelicAgent/*.xcframework"
   s.frameworks             = "SystemConfiguration"
