--- a/Agent.xcodeproj/NewRelic-swiftPackage/.swiftpm/xcode/xcshareddata/xcschemes/NewRelic-SwiftPackage.xcscheme
+++ b/Agent.xcodeproj/NewRelic-swiftPackage/.swiftpm/xcode/xcshareddata/xcschemes/NewRelic-SwiftPackage.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "02FF4B1824E3201400115469"
-               BuildableName = "NewRelic.framework"
-               BlueprintName = "Agent_tvos"
-               ReferencedContainer = "container:Agent.xcodeproj">
+               BlueprintIdentifier = "NewRelic"
+               BuildableName = "NewRelic"
+               BlueprintName = "NewRelic"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "025657F124EB19BF00FE3125"
-               BuildableName = "Agent_tvos_Tests.xctest"
-               BlueprintName = "Agent_tvos_Tests"
-               ReferencedContainer = "container:Agent.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -60,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "02FF4B1824E3201400115469"
-            BuildableName = "NewRelic.framework"
-            BlueprintName = "Agent_tvos"
-            ReferencedContainer = "container:Agent.xcodeproj">
+            BlueprintIdentifier = "NewRelic"
+            BuildableName = "NewRelic"
+            BlueprintName = "NewRelic"
+            ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
