updated podspec template to accommodate the new zip format

--- a/cocoapods/NewRelicAgent.podspec.template
+++ b/cocoapods/NewRelicAgent.podspec.template
@@ -4,7 +4,7 @@ Pod::Spec.new do |s|
   s.version                = "X.XX"
   s.summary                = "Real-time performance data with your next iOS app release."
   s.homepage               = "http://newrelic.com/mobile-monitoring"
-  s.license                = { :type => "Commercial", :file => "NewRelicAgent/LICENSE" }
+  s.license                = { :type => "Commercial", :file => "LICENSE" }
   s.author                 = { "New Relic, Inc." => "support@newrelic.com" }
   s.source                 = { :http => "https://download.newrelic.com/ios_agent/NewRelic_XCFramework_Agent_X.XX.zip" }
   s.ios.deployment_target  = '9.0'
@@ -13,8 +13,8 @@ Pod::Spec.new do |s|
   s.ios.user_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=iphonesimulator*]' => 'arm64 arm64e' }
   s.tvos.pod_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=appletvsimulator*]' => 'arm64' }
   s.tvos.user_target_xcconfig = { 'EXCLUDED_ARCHS[sdk=appletvsimulator*]' => 'arm64' }
-  s.vendored_frameworks    = "NewRelicAgent/NewRelic.xcframework"
-  s.preserve_paths         = "NewRelicAgent/*.xcframework"
+  s.vendored_frameworks    = "NewRelic.xcframework"
+  s.preserve_paths         = "*.xcframework"
   s.frameworks             = "SystemConfiguration"
   s.ios.frameworks         = "CoreTelephony"
   s.libraries              = "z","c++"
