--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libMobileAgent"]
 	path = libMobileAgent
 	url = git@source.datanerd.us:mobile/libMobileAgent.git
+[submodule "modular-crash-reporter-ios"]
+	path = modular-crash-reporter-ios
+	url = https://github.com/microsoft/plcrashreporter
