Support display code coverage (#85)
* Code coverage via XcodeCoverage

* code coverage: pre M1 readme Note

* correct README typo, remove inaccurate emoji from cocoapods section

--- a/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
+++ b/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
@@ -40,7 +40,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "021A15B924C9EEE700E8DFD5"
+            BuildableName = "NewRelic.framework"
+            BlueprintName = "Agent_iOS"
+            ReferencedContainer = "container:Agent.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
