--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,15 @@ jobs:
     - uses: actions/checkout@v3
       with: 
         submodules: true
+    
+    - name: Install gems
+      run: bundle install
 
     - name: Run iOS tests using only Xcode build.
       run: xcodebuild -workspace Agent.xcworkspace -scheme "Agent-iOS" -destination name="iPhone 14" -derivedDataPath="dd" clean test
 
-    # - name: Run tvOS tests using only Xcode build.
-    #   run: xcodebuild -workspace Agent.xcworkspace -scheme "Agent-tvOS" -destination name="Apple TV" -derivedDataPath="dd" clean test
+    - name: Run tvOS tests using only Xcode build.
+      run: xcodebuild -workspace Agent.xcworkspace -scheme "Agent-tvOS" -destination name="Apple TV" -derivedDataPath="dd" clean test
     
     # - name: Run tests on iOS. (Using fastlane)
     #   run: bundle exec fastlane runIOSTests
