--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,11 @@ jobs:
     - uses: actions/checkout@v3
       with: 
         submodules: true
-    
+
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
+
     - name: Install gems
       run: bundle install
 
@@ -22,6 +26,9 @@ jobs:
     
     # - name: Run tests on iOS. (Using fastlane)
     #   run: bundle exec fastlane runIOSTests
+
+    # - name: Archive iOS. (Using xcodebuild)
+    #   run: xcodebuild clean archive -archivePath "archives/iOS.xcarchive" -configuration "Release" -workspace "Agent.xcworkspace" -scheme "Agent-iOS" -sdk "iphoneos" SKIP_INSTALL=NO BUILD_LIBRARIES_FOR_DISTRIBUTION=YES 
 
     - name: Run tests and build NewRelic.xcframework (using fastlane)
       run: bundle exec fastlane testAndBuild
