--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,14 @@ jobs:
     - uses: actions/checkout@v3
       with: 
         submodules: true
-
+    
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '14.1'
 
     - name: Install gems
       run: bundle install
-
+      
     # - name: Run iOS tests using only Xcode build.
     #   run: xcodebuild -workspace Agent.xcworkspace -scheme "Agent-iOS" -destination name="iPhone 14" -derivedDataPath="dd" clean test
 
@@ -44,4 +44,5 @@ jobs:
       run: "aws s3 cp ${{ env.version }} s3://nr-downloads-main/ios-v5/"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-west-1
