--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on: push
 
 jobs:
   test:
+    name : Test 
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
@@ -11,20 +12,49 @@ jobs:
       with: 
         submodules: true
     
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
+
     - name: Install gems
       run: bundle install
 
-    - name: Run iOS tests using only Xcode build.
-      run: xcodebuild -workspace Agent.xcworkspace -scheme "Agent-iOS" -destination name="iPhone 14" -derivedDataPath="dd" clean test
-
-    - name: Run tvOS tests using only Xcode build.
-      run: xcodebuild -workspace Agent.xcworkspace -scheme "Agent-tvOS" -destination name="Apple TV" -derivedDataPath="dd" clean test
+    - name: Run tests on iOS and tvOS (using fastlane)
+      run: bundle exec fastlane runTests
     
-    # - name: Run tests on iOS. (Using fastlane)
-    #   run: bundle exec fastlane runIOSTests
+  deploy:
+    name: Deploy
+    # runs-on: will be set to macos-latest when running on actual GHA. 
+    # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+    runs-on: macos-latest 
+    needs: [test]
+    if:
+      github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main'
+    
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
+    
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
 
-    # - name: Run tests and build NewRelic.xcframework (using fastlane)
-    #   run: bundle exec fastlane testAndBuild
+    - name: Install gems
+      run: bundle install
 
-    # - name: run the Agent iOS Tests and tvOS Tests (using fastlane)
-    #   run: bundle exec fastlane runTests
+    - name: Build NewRelic.xcframework (using fastlane)
+      run: bundle exec fastlane buildAndZip
+
+    - name: Get name
+      run: echo "version=$(cat fastlane/build_version)" >> $GITHUB_ENV
+
+    - name: Print name
+      run: echo "${{ env.version }}" 
+
+    - name: Deploy to staging
+      run: "aws s3 cp ${{ env.version }} s3://nr-downloads-main/ios-v5/"
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
