--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,37 @@
 name: CI
 on: push
-
+      
 jobs:
-  test:
-    name : Test 
+  #test:
+    # name : Test 
+    # # runs-on: will be set to macos-latest when running on actual GHA. 
+    # # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+    # runs-on: macos-latest 
+    # steps:
+    # - uses: actions/checkout@v3
+    #   with: 
+    #     submodules: true
+    
+    # - uses: maxim-lobanov/setup-xcode@v1
+    #   with:
+    #     xcode-version: '14.1'
+
+    # - name: Install gems
+    #   run: bundle install
+
+    # - name: Run tests on iOS and tvOS (using fastlane)
+    #   run: bundle exec fastlane runTests
+  
+  deployS3:
+    name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
-    steps:
-    - uses: actions/checkout@v3
-      with: 
-        submodules: true
-    
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '14.1'
-
-    - name: Install gems
-      run: bundle install
-
-    - name: Run tests on iOS and tvOS (using fastlane)
-      run: bundle exec fastlane runTests
-    
-  deploy:
-    name: Deploy
-    # runs-on: will be set to macos-latest when running on actual GHA. 
-    # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
-    needs: [test]
-    if:
-      github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main'
-    
+    # needs: [test]
+    # if:
+    #   github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main'
+    outputs:
+      version: ${{ steps.setOutput.outputs.version }}
     steps:
     - uses: actions/checkout@v3
       with: 
@@ -49,12 +50,38 @@ jobs:
     - name: Get name
       run: echo "version=$(cat fastlane/build_version)" >> $GITHUB_ENV
 
-    - name: Print name
-      run: echo "${{ env.version }}" 
+    - id: setOutput
+      name: Print name
+      run: echo "version=${{ env.version }}"  >> $GITHUB_OUTPUT
 
-    - name: Deploy to staging
-      run: "aws s3 cp ${{ env.version }} s3://nr-downloads-main/ios-v5/"
+    - name: Deploy to staging S3
+      run: "aws s3 cp NewRelic_XCFramework_Agent_${{ env.version }}.zip s3://nr-downloads-main/ios-v5/"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  
+  deployCocoapods:
+    name: DeployCocoapods
+    runs-on: macos-latest 
+    needs: [deployS3]
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
+
+    - name: Install gems
+      run: bundle install
+
+    - name: Print XCFramework name
+      run: echo "${{ needs.deployS3.outputs.version }}" 
+
+    - name: Create Podspec for XCFramework version
+      run: |
+        mkdir -p build/cocoapods
+        cp cocoapods/NewRelicAgent.podspec.template build/cocoapods/NewRelicAgent.podspec
+        REPLACE=X.XX
+        pushd build/cocoapods
+        sed -i bak "s/$REPLACE/${{ needs.deployS3.outputs.version }}/g" NewRelicAgent.podspec
+        sed -i -e 's/ios_agent/ios-v5/g' NewRelicAgent.podspec
+        cat NewRelicAgent.podspec
