--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,32 +2,32 @@ name: CI
 on: push
       
 jobs:
-  #test:
-    # name : Test 
-    # # runs-on: will be set to macos-latest when running on actual GHA. 
-    # # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    # runs-on: macos-latest 
-    # steps:
-    # - uses: actions/checkout@v3
-    #   with: 
-    #     submodules: true
+  test:
+    name : Test 
+    # runs-on: will be set to macos-latest when running on actual GHA. 
+    # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+    runs-on: macos-latest 
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
     
-    # - uses: maxim-lobanov/setup-xcode@v1
-    #   with:
-    #     xcode-version: '14.1'
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
 
-    # - name: Install gems
-    #   run: bundle install
+    - name: Install gems
+      run: bundle install
 
-    # - name: Run tests on iOS and tvOS (using fastlane)
-    #   run: bundle exec fastlane runTests
+    - name: Run tests on iOS and tvOS (using fastlane)
+      run: bundle exec fastlane runTests
   
   deployS3:
     name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
-    # needs: [test]
+    needs: [test]
     # if:
     #   github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main'
     outputs:
@@ -73,15 +73,28 @@ jobs:
     - name: Install gems
       run: bundle install
 
+    - name: Get name
+      run: echo "version=${{needs.deployS3.outputs.version}}" >> $GITHUB_ENV
+
     - name: Print XCFramework name
-      run: echo "${{ needs.deployS3.outputs.version }}" 
+      run: echo "${{ env.version }}" 
 
     - name: Create Podspec for XCFramework version
       run: |
-        mkdir -p build/cocoapods
-        cp cocoapods/NewRelicAgent.podspec.template build/cocoapods/NewRelicAgent.podspec
+        mkdir -p "release/cocoapods/${{ env.version }}"
+        cp cocoapods/NewRelicAgent.podspec.template "release/cocoapods/${{ env.version }}/NewRelicAgent.podspec"
         REPLACE=X.XX
-        pushd build/cocoapods
-        sed -i bak "s/$REPLACE/${{ needs.deployS3.outputs.version }}/g" NewRelicAgent.podspec
+        pushd "release/cocoapods/${{ env.version }}"
+        sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
         sed -i -e 's/ios_agent/ios-v5/g' NewRelicAgent.podspec
+        rm NewRelicAgent.podspec-e
+        rm NewRelicAgent.podspecbak
         cat NewRelicAgent.podspec
+
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v3
+      with:
+        title: "[${{ env.version }}] Staging Cocoapods"
+        branch: "auto-staging-cocoapods-release-${{ env.version }}"
+        base: develop
+
