--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,25 +2,25 @@ name: CI
 on: push
       
 jobs:
-  # test:
-  #   name : Test 
-  #   # runs-on: will be set to macos-latest when running on actual GHA. 
-  #   # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-  #   runs-on: macos-latest 
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with: 
-  #       submodules: true
+  test:
+    name : Test 
+    # runs-on: will be set to macos-latest when running on actual GHA. 
+    # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+    runs-on: macos-latest 
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
     
-  #   - uses: maxim-lobanov/setup-xcode@v1
-  #     with:
-  #       xcode-version: '14.1'
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
 
-  #   - name: Install gems
-  #     run: bundle install
+    - name: Install gems
+      run: bundle install
 
-  #   - name: Run tests on iOS and tvOS (using fastlane)
-  #     run: bundle exec fastlane runTests
+    - name: Run tests on iOS and tvOS (using fastlane)
+      run: bundle exec fastlane runTests
   
   deployS3:
     name: DeployS3
@@ -79,22 +79,18 @@ jobs:
 
     - name: Create Podspec for XCFramework version
       run: |
-        mkdir -p "release/cocoapods/${{ env.version }}"
-        cp cocoapods/NewRelicAgent.podspec.template "release/cocoapods/${{ env.version }}/NewRelicAgent.podspec"
+        cp cocoapods/NewRelicAgent.podspec.template NewRelicAgent.podspec
         REPLACE=X.XX
-        pushd "release/cocoapods/${{ env.version }}"
         sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
         sed -i -e 's/ios_agent/ios-v5/g' NewRelicAgent.podspec
         rm NewRelicAgent.podspec-e
         rm NewRelicAgent.podspecbak
-        cat NewRelicAgent.podspec
 
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
+    - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        title: "[${{ env.version }}] Staging Cocoapods"
-        branch: "auto-staging-cocoapods-release-${{ env.version }}"
-        base: develop
+        commit_message: "[${{ env.version }}] Staging Cocoapods"
+        branch: staging
+        create_branch: true
 
   deploySPM:
     name: deploySPM
@@ -134,12 +130,10 @@ jobs:
 
         rm $XCFRAMEWORK_NAME
 
-        cat Package.swift
-
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
+    - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        title: "[${{ env.version }}] Staging SPM"
-        branch: "auto-staging-spm-release-${{ env.version }}"
-        base: develop
+        commit_message: "[${{ env.version }}] Staging SPM"
+        branch: staging
+        create_branch: true
+        tagging_message: '${{ env.version }}'
 
