--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: CI
-on: push
+on:  
+  push:
+    branches: 
+      - staging
+  pull_request:
 
 jobs:
   test:
@@ -21,16 +25,16 @@ jobs:
 
     - name: Run tests on iOS and tvOS (using fastlane)
       run: bundle exec fastlane runTests
-    
-  deploy:
-    name: Deploy
+  
+  deployS3:
+    name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
     needs: [test]
-    if:
-      github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main'
-    
+    if: github.ref == 'refs/heads/staging'
+    outputs:
+      version: ${{ steps.setOutput.outputs.version }}
     steps:
     - uses: actions/checkout@v3
       with: 
@@ -49,12 +53,93 @@ jobs:
     - name: Get name
       run: echo "version=$(cat fastlane/build_version)" >> $GITHUB_ENV
 
-    - name: Print name
-      run: echo "${{ env.version }}" 
+    - id: setOutput
+      name: Print name
+      run: echo "version=${{ env.version }}"  >> $GITHUB_OUTPUT
 
-    - name: Deploy to staging
-      run: "aws s3 cp ${{ env.version }} s3://nr-downloads-main/ios-v5/"
+    - name: Deploy to staging S3
+      run: "aws s3 cp NewRelic_XCFramework_Agent_${{ env.version }}.zip s3://nr-downloads-main/ios-v5/"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  
+  deployCocoapods:
+    name: DeployCocoapods
+    runs-on: macos-latest 
+    needs: [deployS3]
+    if: github.ref == 'refs/heads/staging'
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
+
+    - name: Install gems
+      run: bundle install
+
+    - name: Get name
+      run: echo "version=${{needs.deployS3.outputs.version}}" >> $GITHUB_ENV
+
+    - name: Print XCFramework name
+      run: echo "${{ env.version }}" 
+
+    - name: Create Podspec for XCFramework version
+      run: |
+        cp cocoapods/NewRelicAgent.podspec.template NewRelicAgent.podspec
+        REPLACE=X.XX
+        sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
+        sed -i -e 's/ios_agent/ios-v5/g' NewRelicAgent.podspec
+        rm NewRelicAgent.podspec-e
+        rm NewRelicAgent.podspecbak
+
+    # Use git-auto-commit-action to push NewRelicAgent.podspec up to root of newrelic-ios-agent branch: staging.
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "[${{ env.version }}] Staging Cocoapods"
+        branch: staging
+
+  deploySPM:
+    name: deploySPM
+    runs-on: macos-latest 
+    needs: [deployS3]
+    if: github.ref == 'refs/heads/staging'
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
+
+    - name: Install gems
+      run: bundle install
+
+    - name: Get name
+      run: echo "version=${{needs.deployS3.outputs.version}}" >> $GITHUB_ENV
+
+    - name: Print XCFramework name
+      run: echo "${{ env.version }}" 
+
+    - name: Create Package.swift for XCFramework version
+      run: |
+        cp NewRelic-SwiftPackage/Package.swift.template Package.swift
+        ## Below README required for prod spm repo.
+        # cp cocoapods/README.md README.md
+        REPLACEVER={{VERSION}}
+        REPLACECHECKSUM={{CHECKSUM}}
+
+        XCFRAMEWORK_NAME="NewRelic_XCFramework_Agent_${{ env.version }}.zip"
+        curl https://download.newrelic.com/ios-v5/$XCFRAMEWORK_NAME -o $XCFRAMEWORK_NAME
+        SPM_CHECKSUM=`swift package compute-checksum  ${XCFRAMEWORK_NAME}`
+
+        sed -i bak "s/$REPLACEVER/${{ env.version }}/g" Package.swift
+        sed -i -e "s/$REPLACECHECKSUM/$SPM_CHECKSUM/g" Package.swift
+        sed -i -e 's/ios_agent/ios-v5/g' Package.swift
+        rm Package.swift-e
+        rm Package.swiftbak
+
+        rm $XCFRAMEWORK_NAME
+
+    # Use git-auto-commit-action to push Package.swift up to root of newrelic-ios-agent branch: staging.
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "[${{ env.version }}] Staging SPM"
+        branch: staging
+
