--- a/.github/workflows/productionDeploy.yml
+++ b/.github/workflows/productionDeploy.yml
@@ -38,9 +38,9 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   
-  # The deployCocoapodsProduction job creates the prod Podspec from template and pushes to cp trunk.
-  deployCocoapodsProduction:
-    name: deployCocoapodsProduction
+  # The deployProductionSpecs job creates the prod Podspec and Prod Package.swift from template and pushes to cp trunk.
+  deployProductionSpecs:
+    name: deployProductionSpecs
     runs-on: macos-latest 
     needs: [deployS3Production]
     if: github.ref == 'refs/heads/main'
@@ -65,40 +65,13 @@ jobs:
         sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
         rm NewRelicAgent.podspec-e
         rm NewRelicAgent.podspecbak
+        
+        cat NewRelicAgent.podspec
 
-        pod trunk push --allow-warnings NewRelicAgent.podspec
+        # COMMENTED FOR DRY RUN
+        # pod trunk push --allow-warnings NewRelicAgent.podspec
       env:
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
-
-     # At this point we have NewRelicAgent.podspec corresponding to the production build sitting at the repo root.
-     # The following step creates a PR containing that new NewRelicAgent.podspec file at the root of the repo.
-     # Since production builds are infrequent this creates a PR that must be manually approved and merged.
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
-      with:
-        title: "[${{ env.version }}] Production Cocoapods"
-        branch: "auto-cocoapods-release-${{ env.version }}"
-        base: main
-
-  # The deploySPMProduction job creates the prod Package.swift from template and pushes it to the prod SPM url.
-  deploySPMProduction:
-    name: deploySPMProduction
-    runs-on: macos-latest 
-    needs: [deployS3Production]
-    if: github.ref == 'refs/heads/main'
-    steps:
-    - uses: actions/checkout@v3
-      with: 
-        submodules: true
-
-    - name: Install gems
-      run: bundle install
-
-    - name: Get name
-      run: echo "version=${{needs.deployS3Production.outputs.version}}" >> $GITHUB_ENV
-
-    - name: Print XCFramework name
-      run: echo "${{ env.version }}" 
 
     - name: Create Prod Package.swift for XCFramework version
       run: |
@@ -119,20 +92,24 @@ jobs:
 
         rm $XCFRAMEWORK_NAME
 
-        # The following git cmd adds remote https://github.com/newrelic/newrelic-ios-agent-spm.
-        git remote add origin ${{ secrets.PROD_SPM_URL }}
-        git remote -v
-        git add Package.swift
-        git commit -m "Added build ${{ env.version }}"
-        git tag ${{ env.version }}
-        git push origin main --tags
-  
-    # At this point we have Package.swift corresponding to the production build sitting at the repo root.
-    # The following step creates a PR containing that new Package.swift.
-    # Since production builds are infrequent this creates a PR that must be manually approved and merged.
+        cat Package.swift
+
+        # COMMENTED FOR DRY RUN
+        # # The following git cmd adds remote https://github.com/newrelic/newrelic-ios-agent-spm.
+        # # The subsequent git commands push the Package.swift up to that repo. URL is prepended with GHA PAT.
+        # git remote add origin ${{ secrets.PROD_SPM_URL }}
+        # git remote -v
+        # git add Package.swift
+        # git commit -m "Added build ${{ env.version }}"
+        # git tag ${{ env.version }}
+        # git push origin main --tags
+
+     # At this point we have NewRelicAgent.podspec and Package.swift corresponding to the production build sitting at the repo root.
+     # The following step creates a PR containing that new NewRelicAgent.podspec and Package.swift file at the root of the repo.
+     # Since production builds are infrequent this creates a PR that must be manually approved and merged.
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
-        title: "[${{ env.version }}] Production SPM"
-        branch: "auto-spm-release-${{ env.version }}"
+        title: "[${{ env.version }}] Production Release"
+        branch: "auto-production-release-${{ env.version }}"
         base: main
