--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
 
 jobs:
-  test:
-    name : Test 
+  testIOS:
+    name : TestIOS 
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
@@ -25,15 +25,33 @@ jobs:
     - name: Install gems
       run: bundle install
 
-    - name: Run tests on iOS and tvOS (using fastlane)
-      run: bundle exec fastlane runTests
-  
+    - name: Run tests on iOS (using fastlane)
+      run: bundle exec fastlane runIOSTests
+  testTVOS:
+    name : TestTVOS
+    # runs-on: will be set to macos-latest when running on actual GHA. 
+    # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+    runs-on: macos-latest 
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
+    
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
+
+    - name: Install gems
+      run: bundle install
+
+    - name: Run tests on tvOS (using fastlane)
+      run: bundle exec fastlane runTVOSTests
   deployS3:
     name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
-    needs: [test]
+    needs: [testIOS, testTVOS]
     if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main'
     outputs:
       version: ${{ steps.setOutput.outputs.version }}
