--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ on:
       - develop
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   testIOS:
     name : TestIOS 
@@ -140,4 +144,3 @@ jobs:
         commit_message: "[${{ env.version }}] Staging Release"
         branch: staging
         tagging_message: "${{ env.version }}"
-
