--- a/Test Harness/NRTestApp/NRTestApp/NRAPIInfo.plist
+++ b/Test Harness/NRTestApp/NRTestApp/NRAPIInfo.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>crashCollectorAddress</key>
+	<string></string>
+	<key>collectorAddress</key>
+	<string></string>
+	<key>isStaging</key>
+	<false/>
 	<key>NRAPIKey</key>
 	<string></string>
 </dict>
