--- a/.github/workflows/productionDeploy.yml
+++ b/.github/workflows/productionDeploy.yml
@@ -32,7 +32,7 @@ jobs:
       run: echo "version=${{ env.version }}"  >> $GITHUB_OUTPUT
     
     - name: Deploy to production S3
-      run: "aws s3 cp s3://nr-downloads-main/ios-v5/NewRelic_XCFramework_Agent_${{ env.version }}.zip s3://nr-downloads-main/ios_agent/ --copy-props none --recursive"
+      run: "aws s3 cp s3://nr-downloads-main/ios-v5/NewRelic_XCFramework_Agent_${{ env.version }}.zip s3://nr-downloads-main/ios_agent/ --copy-props none"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -63,7 +63,7 @@ jobs:
         cp cocoapods/NewRelicAgent.podspec.template NewRelicAgent.podspec
         REPLACE=X.XX
         sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
-        rm NewRelicAgent.podspec-e
+
         rm NewRelicAgent.podspecbak
         
         # added for dry run
