--- a/Test Harness/NRTestApp/NRTestApp/NRAPIInfo.plist
+++ b/Test Harness/NRTestApp/NRTestApp/NRAPIInfo.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>crashCollectorAddress</key>
-	<string></string>
+	<string>staging-mobile-crash.newrelic.com</string>
 	<key>collectorAddress</key>
-	<string></string>
+	<string>staging-mobile-collector.newrelic.com</string>
 	<key>isStaging</key>
 	<false/>
 	<key>NRAPIKey</key>
-	<string></string>
+	<string>AAb74762ebd3736c35e50adaa4fbe2466e4d26b669-NRMA</string>
 </dict>
 </plist>
