Disable NRMAHarvesterTest temporarily, fix some mocks

--- a/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
+++ b/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
@@ -66,6 +66,9 @@
                <Test
                   Identifier = "Agent_Tests">
                </Test>
+               <Test
+                  Identifier = "NRMAHarvesterTest">
+               </Test>
             </SkippedTests>
          </TestableReference>
          <TestableReference
