--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,11 @@ jobs:
     - name: Install lcov
       run: brew install lcov
 
+    - name: Update gem
+      run: bundle update
+
     - name: Install gems
-      run: bundle install --redownload
+      run: bundle install
 
     - name: Run tests on iOS (using fastlane)
       run: bundle exec fastlane runIOSTests
@@ -54,8 +57,14 @@ jobs:
       with:
         xcode-version: '14.2'
 
+    - name: Install lcov
+      run: brew install lcov
+
+    - name: Update gem
+      run: bundle update
+
     - name: Install gems
-      run: bundle install --redownload
+      run: bundle install
 
     - name: Run tests on tvOS (using fastlane)
       run: bundle exec fastlane runTVOSTests
@@ -77,8 +86,11 @@ jobs:
       with:
         xcode-version: '14.2'
 
+    - name: Update gem
+      run: bundle update
+
     - name: Install gems
-      run: bundle install --redownload
+      run: bundle install
 
     - name: Build NewRelic.xcframework (using fastlane)
       run: bundle exec fastlane buildAndZip
@@ -108,8 +120,11 @@ jobs:
       with: 
         submodules: true
 
+    - name: Update gem
+      run: bundle update
+
     - name: Install gems
-      run: bundle install --redownload
+      run: bundle install
 
     - name: Get name
       run: echo "version=${{needs.deployS3.outputs.version}}" >> $GITHUB_ENV
